# murder-mystery-llm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_personality.py
.claude/: API.md  ARCHITECTURE.md  CONVENTIONS.md  NEXT_SESSION.md  PROJECT.md  TYPES.md  settings.local.json
configs/: app.yaml  game_rules.yaml  logging.yaml  party.json  party.yaml  party_defaults.yaml  prompts.yaml
configs/gametypes/: classic.json  quick.json
docker/: Dockerfile  nginx.conf
docker/systemd/: mmllm.service
notebooks/: game_testing.ipynb  server_control.ipynb
scripts/: export_dataset.py  run_dev.sh  run_prod.sh  run_tournament.py
src/mmllm/: __init__.py
src/mmllm/agents/: base.py  llm_agent.py  personality_agent.py  scripted_agent.py  summary_agent.py
src/mmllm/agents/personas/: __init__.py  library.yaml
src/mmllm/core/: __init__.py  clock.py  exceptions.py  game_config.py  http.py  ids.py  rng.py  types.py  utils.py
src/mmllm/data/: event_log.py  gametype_config.py  party_config.py  replay.py  storage.py
src/mmllm/game/: __init__.py  adjudicator.py  engine.py  loop.py  rules.py  state.py  summarizer.py  transcript.py
src/mmllm/llm/: __init__.py  client.py  local_client.py  openai_client.py  output_parser.py  personality.py  prompt_builder.py  schemas.py
src/mmllm/training/: dataset.py  eval.py  features.py
src/mmllm/web/: __init__.py  deps.py  main.py
src/mmllm/web/api/: routes_agents.py  routes_games.py  routes_party.py  routes_runs.py
src/mmllm/web/ws/: __init__.py  events.py
tests/: test_engine.py  test_parser.py  test_rules.py
(+15 files in other folders)
