[project]
name = "murder-mystery-llm"
version = "0.1.0"
description = "Mafia game simulation with LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.25",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmllm"]
